# agentpool

./: .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.cursor/: mcp.json.example
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  provider_probe.md
.github/workflows/: ci.yml  release.yml
docs/: agent-cli-and-mcp.md  agentpool-skill.md  architecture.md  examples.md  install.md  mcp-clients.md  mcp-tools.md  model-catalog.md  onboarding.md  provider-adapters.md  provider-lifecycle-matrix.md  quickstart.md  release.md  security.md  setup-claude-code.md  setup-codex.md  setup-copilot.md  setup-cursor-cli.md  setup-cursor.md  setup-devin.md  setup-droid.md  stats.md  usage-detection.md  usage-probe-matrix.md
docs/examples/: README.md
scripts/: check_release_metadata.py  install.sh
src/agentpool/: __init__.py  __main__.py  agent_io.py  artifacts.py  cli.py  config.py  event_detection.py  git_worktree.py  mcp_server.py  models.py  onboarding.py  policy.py  preferences.py  provider_model_catalog.json  redaction.py  session_manager.py  store.py  utils.py
src/agentpool/fixtures/: __init__.py
src/agentpool/fixtures/fake_agents/: __init__.py  fake_approval_agent.py  fake_common.py  fake_completed_agent.py  fake_idle_agent.py  fake_limit_agent.py  fake_patch_agent.py  fake_question_agent.py
src/agentpool/mcp/: __init__.py  resources.py  tools.py
src/agentpool/providers/: __init__.py  base.py  registry.py
src/agentpool/runtimes/: __init__.py  base.py  terminal_control.py  tmux.py
src/agentpool/stats/: __init__.py  card.py  compute.py  queries.py  render.py  window.py
src/agentpool/usage/: __init__.py  _common.py  ccusage.py  claude.py  codex.py  codexbar.py  combine.py  copilot.py  devin.py  parsers.py  probes.py  provider_parsers.py  summary.py
tests/fixtures/: provider_model_catalog_golden.json  stats_seed.py
tests/fixtures/usage/: claude_usage.txt  codex_rate_limits.json  copilot_user.json  devin_plan_status.json
tests/integration/: test_fake_terminal_control_flow.py  test_fake_tmux_flow.py
tests/unit/: test_agent_io.py  test_cli.py  test_event_policy.py  test_mcp_surface.py  test_mcp_tools.py  test_models_config_store.py  test_onboarding.py  test_redaction.py  test_stats_cli.py  test_stats_mcp.py  test_stats_window.py  test_subprocess_safety.py  test_terminal_control_runtime.py  test_usage_probes.py  test_usage_provider_parsers.py  test_usage_summary_enrichment.py
