[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpool-cli"
version = "0.1.5"
description = "Make full use of every coding-agent subscription you pay for: a local CLI + MCP server that surfaces live usage limits and offloads work to providers with headroom."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "AgentPool contributors" }
]
dependencies = [
  "mcp>=1.27,<2",
  "certifi>=2024",
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
card = [
  "pillow>=10",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
agentpool = "agentpool.cli:app"
# Alias matching the PyPI distribution name so `uvx agentpool-cli mcp` resolves
# (MCP registry runs the package by its identifier). Primary command stays `agentpool`.
agentpool-cli = "agentpool.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpool"]
include = [
  "src/agentpool/provider_model_catalog.json",
  "src/agentpool/fixtures/**/*.py",
]

[tool.hatch.build.targets.wheel.force-include]
"docs/agentpool-skill.md" = "agentpool/docs/agentpool-skill.md"
"docs/onboarding.md" = "agentpool/docs/onboarding.md"
"docs/quickstart.md" = "agentpool/docs/quickstart.md"
